<resources>
    <string name="app_name">Menu </string>
    <string name="Food_type">asian food</string>
    <string name="food_name">Gato gato</string>
    <string name="Gato_gato_price">600</string>
    <string name="Gato_gato_discription">Stove mela kadyee neekalana sunami</string>
    <string name="Info_button">More info</string>
    <string name="Cart_button">Add to cart</string>
    <string name="Search_input_hidden">search......</string>
    <string name="food_name2">lementooo</string>
    <string name="lemento_price">670</string>
</resources>